--- a/generic_datasource_client/src/main/webapp/WEB-INF/web.xml
+++ b/generic_datasource_client/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,16 @@
         <error-code>404</error-code>  
         <location>/404.html</location>  
     </error-page>
+    <security-constraint>
+        <display-name>Constraint1</display-name>
+        <web-resource-collection>
+            <web-resource-name>OpenDsgWebResource</web-resource-name>
+            <description/>
+            <url-pattern>/*</url-pattern>
+        </web-resource-collection>
+        <user-data-constraint>
+            <description/>
+            <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>
+    </security-constraint>
 </web-app>
